完善了markdown使用和mkdocs.yml相关设置

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block announce %}
+  通知：啦啦啦，shafish用新博客啦！！
+{% endblock %}
+
 {% block disqus %}
 <div id="vssue"></div>
 
