添加github action md(test)
.github/workflow/ci.yml

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -19,10 +19,11 @@
 
       data: {
         title: 'shafish.cn',
+        prefix: '[BlogComment]',
 
         options: {
           owner: 'shafishcn',
-          repo: 'blog_comment_by_issue',
+          repo: 'shafish_blog',
           clientId: 'f49fcb8c02a7868c8690',
           clientSecret: '5940fc487ff4e7237a01a28c0fe3775140bf05b2', // only required for some of the platforms
         },
