调整配色，fix评论相同issue问题

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,14 +1,10 @@
 {% extends "base.html" %}
 
-{% block announce %}
-  通知：啦啦啦，shafish用新博客啦！！
-{% endblock %}
-
 {% block disqus %}
 <div id="vssue"></div>
 
-<link rel="stylesheet" href="https://unpkg.com/vssue/dist/vssue.min.css">
-<!-- OR: vue full build (runtime + compiler)  -->
+<!--<link rel="stylesheet" href="https://unpkg.com/vssue/dist/vssue.min.css">
+ OR: vue full build (runtime + compiler)  -->
 <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
 <!-- Vssue Github build -->
 <script src="https://unpkg.com/vssue/dist/vssue.github.min.js"></script>
@@ -16,16 +12,18 @@
 <script>
     new Vue({
       el: '#vssue',
-
+   
       data: {
-        title: 'shafish.cn',
-        prefix: '[BlogComment]',
-
+        title: options => `${options.prefix}${document.URL}`,
+        
         options: {
           owner: 'shafishcn',
           repo: 'shafish_blog',
           clientId: 'f49fcb8c02a7868c8690',
           clientSecret: '5940fc487ff4e7237a01a28c0fe3775140bf05b2', // only required for some of the platforms
+          prefix: '[BlogComment]',
+          labels: [':sunny:'],
+          issueContent: ({ url }) =>`这个 Issue 由 Vssue 自动创建，用来存储该页面的评论：${url}`
         },
       },
 
