--- a/overrides/comment.html
+++ b/overrides/comment.html
@@ -4,7 +4,7 @@
   {{ super() }}
 
   <!-- Giscus -->
-  <!-- Replace with generated snippet  https://giscus.app/themes/custom_example.css-->
+  <!-- Replace with generated snippet  -->
   <script src=" https://giscus.app/client.js"
   data-repo="tffats/shafish_blog"
   data-repo-id="R_kgDOGirg3w"
