--- a/overrides/comment.html
+++ b/overrides/comment.html
@@ -3,9 +3,9 @@
 {% block content %}
   {{ super() }}
 
-  <!-- Giscus -->
+  <!-- Giscus https://file.cdn.shafish.cn/blog/js/client.js  https://file.cdn.shafish.cn/blog/css/custom_example.css-->
   <!-- Replace with generated snippet https://giscus.app/client.js https://giscus.app/themes/custom_example.css -->
-  <script src="https://file.cdn.shafish.cn/blog/js/client.js"
+  <script src="https://giscus.app/client.js"
   data-repo="tffats/shafish_blog"
   data-repo-id="R_kgDOGirg3w"
   data-category="Announcements"
@@ -14,7 +14,7 @@
   data-reactions-enabled="1"
   data-emit-metadata="1"
   data-input-position="top"
-  data-theme="https://file.cdn.shafish.cn/blog/css/custom_example.css"
+  data-theme="https://giscus.app/themes/custom_example.css"
   data-lang="zh-CN"
   data-loading="lazy"
   crossorigin="anonymous"
